kubernetes/canary/ingress-canary.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-canary
  labels:
    part-of: canary-template
  annotations:
    # deprecated
    # kubernetes.io/ingress.class: "nginx"

    # Enable canary and send 30% of traffic to version 2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  ingressClassName: nginx
  rules:
  - host: <host_ip>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-name-template
            port: 
              number: 80
